Add option for ACS, add option to output csv

--- a/README
+++ b/README
@@ -1,28 +1,30 @@
 Examples:
 
-1. Get the population variable ('H010001' and rename it to 'pop') for every ZCTA
-   in California (06), add it to the 2010 ZCTA-level TIGER shapefile for CA,
+1. Get the population variable ('P001001' renamed to 'pop') for every ZCTA in
+   California (06), add it to the 2010 ZCTA-level TIGER shapefile for CA,
    and output it to 'pop_shp/zcta2010.shp'.
 python3 census.py \
-    --vars H010001:pop \
+    --db census \
+    --vars P001001:pop \
     --geo state:06,'zip code tabulation area (or part)' \
     --tiger ./data/census/tl_2010_06_zcta510.shp \
     --out pop_shp/zcta2010.shp
 
-2. Get the household and population variables('H001001' renamed to 'household',
-   'H010001' not renamed) for every block in Los Angeles (037), California
-   (06), add it to the 2010 block-level TIGER shapefile for LA, CA and output
-   it to 'block06037.shp'.
+2. Get #households with income<$10,000 ('DP03_0052E' renamed to
+   'household_lt_10k') and %households with married couples ('DP02_0002PE' not
+   renamed) for every tract in Los Angeles (037), California (06) and output
+   it to 'tract06037.csv'.
 python3 census.py \
-    --vars H001001:household,H010001 \
-    --geo state:06,county:037,tract,block \
-    --tiger tl_2020_06037_tabblock10.zip \
-    --out block06037.shp
+    --db acs \
+    --vars DP03_0052E:household_lt_10k,DP02_0002PE \
+    --geo state:06,county:037,tract \
+    --out tract06037.csv
 
 
 Resources:
     Shapefiles: https://www2.census.gov/geo/tiger/TIGER2020PL/LAYER/
-    API guide: https://www.census.gov/content/dam/Census/data/developers/api-user-guide/api-guide.pdf
-    API examples: https://api.census.gov/data/2010/dec/sf1/examples.html
-    List of variables: https://api.census.gov/data/2010/dec/sf1/variables.html
-    Geo hierarchies: https://api.census.gov/data/2010/dec/sf1/geography.html
+    Census:
+    - API guide: https://www.census.gov/content/dam/Census/data/developers/api-user-guide/api-guide.pdf
+    - API examples, variables, and geo hierarchies: https://api.census.gov/data/2010/dec/sf1.html
+    5-year ACS (Data Profile tables):
+    - API examples, variables, and geo hierarchies: https://api.census.gov/data/2019/acs/acs5/profile.html
